added favicons, fixed README

--- a/layouts/index.html
+++ b/layouts/index.html
@@ -69,7 +69,7 @@
     <p></p>
     <h2>
       <a href="https://www.twitch.tv/flashbackravecommittee" target="_blank"
-        >CATCH US WHEN WE ARE LIVE HERE OR ON TWITCH</a
+        >CATCH US WHEN WE ARE LIVE HERE, OR ON TWITCH</a
       >
     </h2>
     <p></p>
