pushing big changes for optimisation and loading

--- a/layouts/index.html
+++ b/layouts/index.html
@@ -7,7 +7,7 @@
 </div>
 
 <div class="row-fluid">
-  <div class="span3 bs-docs-sidebar">
+  <div class="span2 bs-docs-sidebar">
     <ul class="nav nav-list bs-docs-sidenav">
       <a href="/"
         ><img
@@ -62,14 +62,14 @@
     <p></p>
   </div>
 
-  <div class="span9 bs-docs-sidebar">
+  <div class="span10 bs-docs-sidebar">
     <p></p>
     <p></p>
     <hr class="soften" />
     <p></p>
     <h2>
       <a href="https://www.twitch.tv/flashbackravecommittee" target="_blank"
-        >CATCH US WHEN WE ARE LIVE HERE, OR ON TWITCH</a
+        >CATCH US WHEN WE ARE LIVE HERE, OR ON TWITCH!!</a
       >
     </h2>
     <p></p>
