--- a/static/css/style.css
+++ b/static/css/style.css
@@ -4,6 +4,10 @@
 
 h2 {
   white-space: normal;
+  font-size: 28px;
+}
+.page-header img {
+  max-height: 170px;
 }
 
 img:hover {
@@ -47,13 +51,44 @@ img:hover {
 }
 
 .donk-marquee {
-  width: 100%;
-  height: 20px;
+  width: auto;
+  height: 21px;
   color: #c34d9c;
   font-size: 15px;
   font-family: Impact;
   text-decoration: underline;
   background-color: #e9e511;
-  border-width: 2px;
+  border-width: 3px;
   border-style: groove;
+}
+.container {
+  margin-top: 0px;
+  margin-left: 50px;
+  margin-right: 50px;
+}
+.navbar-fixed-top {
+  margin-bottom: 0px;
+}
+@media (min-width: 1200px) {
+  .container,
+  .navbar-static-top .container,
+  .navbar-fixed-top .container,
+  .navbar-fixed-bottom .container {
+    width: auto;
+  }
+  h2 {
+    font-size: 32px;
+  }
+}
+
+@media (min-width: 768px) and (max-width: 979px) {
+  h2 {
+    font-size: 15px;
+  }
+}
+@media (max-width: 767px) {
+  body {
+    padding-right: 0px;
+    padding-left: 0px;
+  }
 }
