--- a/layouts/index.html
+++ b/layouts/index.html
@@ -60,6 +60,16 @@
       </h2>
     </ul>
     <p></p>
+    <ul class="nav nav-list bs-docs-sidenav">
+      <a href="/"
+        ><img
+          alt="FLAMINYIN"
+          src="images/flaminyin.png"
+          width="100%"
+          height="auto"
+      /></a>
+    </ul>
+    <p></p>
   </div>
 
   <div class="span10 bs-docs-sidebar">
@@ -73,18 +83,20 @@
       >
     </h2>
     <p></p>
-    <div id="twitch-embed"></div>
-    <!-- Load the Twitch embed script -->
-    <script src="https://embed.twitch.tv/embed/v1.js"></script>
-    <!-- Create a Twitch.Embed object that will render within the "twitch-embed" root element. -->
-    <script type="text/javascript">
-      new Twitch.Embed("twitch-embed", {
-        top: "15%",
-        width: "100%",
-        height: 480,
-        channel: "flashbackravecommittee",
-      });
-    </script>
+    <div class="twitch-content">
+      <div id="twitch-embed"></div>
+      <!-- Load the Twitch embed script -->
+      <script src="https://embed.twitch.tv/embed/v1.js"></script>
+      <!-- Create a Twitch.Embed object that will render within the "twitch-embed" root element. -->
+      <script type="text/javascript">
+        new Twitch.Embed("twitch-embed", {
+          top: "15%",
+          width: "100%",
+          height: 600,
+          channel: "flashbackravecommittee",
+        });
+      </script>
+    </div>
   </div>
 </div>
 
