--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -33,6 +33,7 @@
                         {{ end }}
                     {{ end }}
                 </ul>
+                  <img src="images/netscape.gif" style="max-height:20px;height:100%;width:100px;" />
             </div>
             
         </div>
