added some movement to the supra

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -9,6 +9,9 @@ h2 {
 .page-header img {
   max-height: 170px;
 }
+.footer-container .zoomzoom {
+  animation: move 2s linear 1s infinite;
+}
 
 img:hover {
   animation: shake 0.5s;
@@ -47,6 +50,14 @@ img:hover {
   }
   100% {
     transform: translate(1px, -2px) rotate(-1deg);
+  }
+}
+@keyframes move {
+  from {
+    transform: translateX(-30vw);
+  }
+  to {
+    transform: translateX(100vw);
   }
 }
 
