--- a/layouts/index.html
+++ b/layouts/index.html
@@ -2,7 +2,7 @@
 
 <div class="row-fluid navmargin">
   <div class="page-header">
-    <img src="images/DONKWORLDLOGO.gif" style="width: 100%" />
+    <a href="/"> <img src="images/DONKWORLDLOGO.gif" style="width: 100%" /></a>
   </div>
 </div>
 
