--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -9,11 +9,11 @@
   <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png" />
   <link rel="manifest" href="/site.webmanifest" />
   <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#5bbad5" />
+  <link rel="stylesheet" href="{{ "/css/bootstrap.css" | relURL }}"/ > <link
+  rel="stylesheet" href="{{ "/css/bootstrap-responsive.css" | relURL }}" />
+  <link rel="stylesheet" href="{{ "/css/style.css" | relURL }}" />
   <meta name="msapplication-TileColor" content="#da532c" />
   <meta name="theme-color" content="#ffffff" />
-  <link rel="stylesheet" href="css/bootstrap.css" />
-  <link rel="stylesheet" href="css/bootstrap-responsive.css" />
-  <link rel="stylesheet" href="css/style.css" />
   <link rel="canonical" href="{{ .Site.BaseURL }}" />
   <script
     async
