--- a/layouts/index.html
+++ b/layouts/index.html
@@ -97,6 +97,34 @@
         });
       </script>
     </div>
+    <p></p>
+    <h2>
+      <a href="https://www.twitch.tv/flashbackravecommittee" target="_blank"
+        >STREAMING LIVE ON THE THIRD SAT OF EVERY MONTH!!</a
+      >
+    </h2>
+    <p></p>
+    <hr class="soften" />
+    <div id="yt-archive">
+      <p></p>
+      <h2>
+        <a
+          href="https://www.youtube.com/channel/UCyI4fQ7kwBUUTmAapqA_8Pg/videos"
+          target="_blank"
+          >RECENT VIDS!</a
+        >
+      </h2>
+      <p></p>
+      <iframe
+        width="100%"
+        height="600"
+        src="https://www.youtube.com/embed/videoseries?controls=0&amp;list=PLGZjDEyBKUnyY0iCWh5BZCUy5sqelUE_m"
+        title="YouTube video player"
+        frameborder="0"
+        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+        allowfullscreen
+      ></iframe>
+    </div>
   </div>
 </div>
 
