--- a/layouts/index.html
+++ b/layouts/index.html
@@ -1,8 +1,12 @@
 {{ define "main" }}
 
-<div class="row-fluid navmargin">
-  <div class="page-header">
-    <a href="/"> <img src="images/DONKWORLDLOGO.gif" style="width: 100%" /></a>
+<div class="container">
+  <div class="row-fluid navmargin">
+    <div class="page-header">
+      <a href="/">
+        <img src="images/DONKWORLDLOGO.gif" style="width: 100%"
+      /></a>
+    </div>
   </div>
 </div>
 
@@ -83,6 +87,7 @@
       >
     </h2>
     <p></p>
+    <div class="span1"></div>
     <div class="twitch-content">
       <div id="twitch-embed"></div>
       <!-- Load the Twitch embed script -->
@@ -125,6 +130,7 @@
         allowfullscreen
       ></iframe>
     </div>
+    <p></p>
   </div>
 </div>
 
