changes on colors and introduced a menu for mobile view

--- a/layouts/index.html
+++ b/layouts/index.html
@@ -110,7 +110,8 @@
     </h2>
     <p></p>
     <hr class="soften" />
-    <div id="yt-archive">
+    <!-- WIP -->
+    <!-- <div id="yt-archive">
       <p></p>
       <h2>
         <a
@@ -129,7 +130,7 @@
         allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
         allowfullscreen
       ></iframe>
-    </div>
+    </div> -->
     <p></p>
   </div>
 </div>
