--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -3,7 +3,7 @@
 <nav class="navbar navbar-inverse navbar-fixed-top">
     <div class="navbar-inner">
         <div class="container">
-            <button type="button" class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse"></button>
+            <button type="button" class="btn btn-navbar btn-primary btn-large" data-toggle="collapse" data-target=".nav-collapse"></button>
             <a class="brand" href="{{ .Site.BaseURL }}">{{ .Site.Title }}</a>
             <div class="nav-collapse collapse">
                 <ul class="nav">
