--- a/static/css/style.css
+++ b/static/css/style.css
@@ -2,6 +2,9 @@
   margin-top: 2em;
 }
 
+a {
+  color: rgb(234, 60, 247);
+}
 h2 {
   white-space: normal;
   font-size: 28px;
@@ -11,6 +14,33 @@ h2 {
 }
 .footer-container .zoomzoom {
   animation: move 2s linear 1s infinite;
+}
+.navbar-inverse .brand {
+  font-weight: 1000;
+  color: #39ff35;
+}
+
+.donk-marquee {
+  width: auto;
+  height: 21px;
+  color: rgb(234, 60, 247);
+  font-size: 15px;
+  font-family: Impact;
+  text-decoration: underline;
+  background-color: #e9e511;
+  border-width: 3px;
+  border-style: groove;
+}
+.container {
+  margin-top: 0px;
+  margin-left: 50px;
+  margin-right: 50px;
+}
+.navbar-fixed-top {
+  margin-bottom: 0px;
+}
+.nav-collapse .nav {
+  background-color: #bbbbbb;
 }
 
 img:hover {
@@ -61,26 +91,6 @@ img:hover {
   }
 }
 
-.donk-marquee {
-  width: auto;
-  height: 21px;
-  color: #c34d9c;
-  font-size: 15px;
-  font-family: Impact;
-  text-decoration: underline;
-  background-color: #e9e511;
-  border-width: 3px;
-  border-style: groove;
-}
-.container {
-  margin-top: 0px;
-  margin-left: 50px;
-  margin-right: 50px;
-}
-.navbar-fixed-top {
-  margin-bottom: 0px;
-}
-
 @media (min-width: 1200px) {
   .container,
   .navbar-static-top .container,
@@ -92,7 +102,6 @@ img:hover {
     font-size: 32px;
   }
 }
-
 @media (min-width: 768px) and (max-width: 979px) {
   h2 {
     font-size: 15px;
