removed redundant white line

--- a/layouts/index.html
+++ b/layouts/index.html
@@ -109,9 +109,11 @@
       >
     </h2>
     <p></p>
-    <hr class="soften" />
+
     <!-- WIP -->
-    <!-- <div id="yt-archive">
+    <!-- 
+      <hr class="soften" />
+      <div id="yt-archive">
       <p></p>
       <h2>
         <a
