--- a/layouts/index.html
+++ b/layouts/index.html
@@ -2,11 +2,13 @@
 
 <div class="container">
   <div class="row-fluid navmargin">
-    <div class="page-header">
+    <div class="span2"></div>
+    <div class="page-header span8">
       <a href="/">
         <img src="images/DONKWORLDLOGO.gif" style="width: 100%"
       /></a>
     </div>
+    <div class="span2"></div>
   </div>
 </div>
 
