--- a/layouts/partials/scripts.html
+++ b/layouts/partials/scripts.html
@@ -14,3 +14,8 @@
         document.getElementById('thisyear').innerHTML = new Date().getFullYear();
     };
 </script>
+<script>
+	$(window).load(function() {
+		$(".se-pre-con").fadeOut("slow");;
+	});
+</script>
