--- a/static/css/style.css
+++ b/static/css/style.css
@@ -23,7 +23,15 @@ h2 {
   font-weight: 1000;
   color: #39ff35;
 }
-
+.se-pre-con {
+  position: fixed;
+  left: 0px;
+  top: 0px;
+  width: 100%;
+  height: 100%;
+  z-index: 9999;
+  background-color: #39ff35;
+}
 .donk-marquee {
   width: auto;
   height: 21px;
@@ -45,6 +53,35 @@ h2 {
 }
 .nav-collapse .nav {
   background-color: #bbbbbb;
+}
+
+#wrap386 {
+  position: fixed;
+  right: 0;
+  bottom: 0;
+  z-index: 9999999;
+  width: 100%;
+  height: 100%;
+  background: #03ff00;
+}
+
+#bar386 {
+  float: right;
+  width: 100%;
+  height: 20px;
+  margin-top: -20px;
+  font-weight: bold;
+  color: #ffffff;
+  background: #03ff00;
+}
+
+#cursor386 {
+  position: fixed;
+  right: 0;
+  bottom: 0;
+  z-index: 9999999;
+  font-weight: bold;
+  color: #e9e511;
 }
 
 img:hover {
