changed font and spacing up top

--- a/layouts/index.html
+++ b/layouts/index.html
@@ -83,11 +83,13 @@
     <p></p>
     <hr class="soften" />
     <p></p>
-    <h2>
-      <a href="https://www.twitch.tv/flashbackravecommittee" target="_blank"
-        >CATCH US WHEN WE ARE LIVE HERE, OR ON TWITCH!!</a
-      >
-    </h2>
+    <div class="m-link">
+      <h2>
+        <a href="https://www.twitch.tv/flashbackravecommittee" target="_blank"
+          >CATCH US WHEN WE ARE LIVE HERE, OR ON TWITCH!!</a
+        >
+      </h2>
+    </div>
     <p></p>
     <div class="span1"></div>
     <div class="twitch-content">
@@ -105,11 +107,13 @@
       </script>
     </div>
     <p></p>
-    <h2>
-      <a href="https://www.twitch.tv/flashbackravecommittee" target="_blank"
-        >STREAMING LIVE ON THE THIRD SAT OF EVERY MONTH!!</a
-      >
-    </h2>
+    <div class="m-link">
+      <h2>
+        <a href="https://www.twitch.tv/flashbackravecommittee" target="_blank"
+          >STREAMING LIVE ON THE THIRD SAT OF EVERY MONTH!!</a
+        >
+      </h2>
+    </div>
     <p></p>
 
     <!-- WIP -->
