more general fixes

--- a/layouts/index.html
+++ b/layouts/index.html
@@ -17,11 +17,17 @@
     <ul class="nav nav-list bs-docs-sidenav">
       <a href="/"
         ><img
-          alt="EMAIL"
+          alt="HOME"
           src="images/websitelogo.png"
           width="100%"
           height="auto"
       /></a>
+    </ul>
+    <p></p>
+    <ul class="nav nav-list bs-docs-sidenav">
+      <h2>
+        <a href="#" onmousedown="bleep.play()">DONK</a>
+      </h2>
     </ul>
     <p></p>
     <ul class="nav nav-list bs-docs-sidenav">
