--- a/layouts/partials/scripts.html
+++ b/layouts/partials/scripts.html
@@ -19,3 +19,7 @@
 		$(".se-pre-con").fadeOut("slow");;
 	});
 </script>
+<script>
+    var bleep = new Audio ();
+    bleep.src = "music/donk.mp3";
+</script>
