changed heading color

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -52,7 +52,7 @@ h2 {
 .navbar-inverse .brand {
   padding-top: 2px;
   font-weight: 1000;
-  color: #39ff35;
+  color: #000;
 }
 .se-pre-con {
   position: fixed;
