donked the supra

--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -2,5 +2,7 @@
   <hr class="soften" />
   <p>{{- partial "copyright.html" . -}}</p>
 
-  <a href="/"><img class="zoomzoom" src="images/supra.png" /></a>
+  <a href="#" onmousedown="bleep.play()"
+    ><img class="zoomzoom" src="images/supra.png"
+  /></a>
 </footer>
