--- a/layouts/partials/scripts.html
+++ b/layouts/partials/scripts.html
@@ -23,3 +23,7 @@
     var bleep = new Audio ();
     bleep.src = "music/donk.mp3";
 </script>
+<script>
+    var bleep2 = new Audio ();
+    bleep2.src = "music/nine-pm.mp3";
+</script>
