making sure cursor is there

--- a/layouts/index.html
+++ b/layouts/index.html
@@ -73,7 +73,7 @@
     </ul>
     <p></p>
     <ul class="nav nav-list bs-docs-sidenav">
-      <a onmousedown="bleep2.play()"
+      <a href="javascript:void(0);" onmousedown="bleep2.play()"
         ><img
           alt="FLAMINYIN"
           src="images/flaminyin.png"
