--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -2,7 +2,7 @@
   <hr class="soften" />
   <p>{{- partial "copyright.html" . -}}</p>
 
-  <a onmousedown="bleep.play()"
+  <a href="javascript:void(0);" onmousedown="bleep.play()"
     ><img class="zoomzoom" src="images/supra.png"
   /></a>
 </footer>
