--- a/layouts/partials/scripts.html
+++ b/layouts/partials/scripts.html
@@ -2,6 +2,7 @@
 <script src="{{ "/js/bootstrap-386.js" | relURL }}"></script>
 <script src="{{ "/js/bootstrap-transition.js" | relURL }}"></script>
 <script src="{{ "/js/bootstrap-collapse.js" | relURL }}"></script>
+<script src="{{ "/js/dvd.js" | relURL }}"></script>
 <script>
     _386 = { 
         fastLoad:{{ .Site.Params.loadfastload }},
