added domain specific analytics

--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -21,5 +21,6 @@
     data-website-id="2be20ce8-ba49-4695-af68-cb1394a282d7"
     src="https://analytics.0x40.me/umami.js"
     data-do-not-track="true"
+    data-domains="dev.donk.world,donk.world,www.donk.world"
   ></script>
 </head>
