--- a/docs/static/css/style.css
+++ b/docs/static/css/style.css
@@ -2,13 +2,16 @@
    HTML content. To learn how to do something, just try searching Google for questions like
    "how to change link color." */
 
-* {margin:0; padding: 0;}
+* {
+  margin: 0;
+  padding: 0;
+}
 
-
-html, body {
+html,
+body {
   background-color: #03ff00;
   font-family: Verdana;
-  width:  100%;
+  width: 100%;
   height: 100%;
   margin: 0;
 }
@@ -19,10 +22,9 @@ html, body {
   width: 50%;
 }
 
-
 /* Keep Supra bottom left */
 .supra {
-  max-width: 10% 
+  max-width: 10%;
   z-index: -100;
   position: fixed;
   bottom: 10px;
@@ -44,44 +46,65 @@ img:hover {
   animation-iteration-count: infinite;
 }
 @keyframes shake {
-  0% { transform: translate(1px, 1px) rotate(0deg); }
-  10% { transform: translate(-1px, -2px) rotate(-1deg); }
-  20% { transform: translate(-3px, 0px) rotate(1deg); }
-  30% { transform: translate(3px, 2px) rotate(0deg); }
-  40% { transform: translate(1px, -1px) rotate(1deg); }
-  50% { transform: translate(-1px, 2px) rotate(-1deg); }
-  60% { transform: translate(-3px, 1px) rotate(0deg); }
-  70% { transform: translate(3px, 1px) rotate(-1deg); }
-  80% { transform: translate(-1px, -1px) rotate(1deg); }
-  90% { transform: translate(1px, 2px) rotate(0deg); }
-  100% { transform: translate(1px, -2px) rotate(-1deg); }
+  0% {
+    transform: translate(1px, 1px) rotate(0deg);
+  }
+  10% {
+    transform: translate(-1px, -2px) rotate(-1deg);
+  }
+  20% {
+    transform: translate(-3px, 0px) rotate(1deg);
+  }
+  30% {
+    transform: translate(3px, 2px) rotate(0deg);
+  }
+  40% {
+    transform: translate(1px, -1px) rotate(1deg);
+  }
+  50% {
+    transform: translate(-1px, 2px) rotate(-1deg);
+  }
+  60% {
+    transform: translate(-3px, 1px) rotate(0deg);
+  }
+  70% {
+    transform: translate(3px, 1px) rotate(-1deg);
+  }
+  80% {
+    transform: translate(-1px, -1px) rotate(1deg);
+  }
+  90% {
+    transform: translate(1px, 2px) rotate(0deg);
+  }
+  100% {
+    transform: translate(1px, -2px) rotate(-1deg);
+  }
 }
 /* Change webfont */
 @font-face {
-    font-family: 'deutsch_gothicnormal';
-    src: url('fonts/gothic-webfont.woff2') format('woff2'),
-         url('fonts/gothic-webfont.woff') format('woff');
-    font-weight: normal;
-    font-style: normal;
-
+  font-family: "deutsch_gothicnormal";
+  src: url("fonts/gothic-webfont.woff2") format("woff2"),
+    url("fonts/gothic-webfont.woff") format("woff");
+  font-weight: normal;
+  font-style: normal;
 }
 /* Change mouse cursor */
- a{
-        cursor: url("static/mitzicur"), default;
-    }
+a {
+  cursor: url("static/mitzicur"), default;
+}
 /* Scrolling text marquee */
 marquee {
   display: block;
   margin-left: auto;
   margin-right: auto;
-  width: 60%; 
-  height: 20px; 
-  color: #c34d9c; 
-  font-size: 15px; 
-  font-family: Impact; 
-  text-decoration: underline; 
-  background-color: #e9e511; 
-  border-width: 2px; 
+  width: 60%;
+  height: 20px;
+  color: #c34d9c;
+  font-size: 15px;
+  font-family: Impact;
+  text-decoration: underline;
+  background-color: #e9e511;
+  border-width: 2px;
   border-style: groove;
 }
 /* Floating images */
@@ -125,28 +148,28 @@ img {
   padding: 0px 10px;
 }
 #flashMe {
-  height:70%;
-  width:100%;
-  background:black;
+  height: 70%;
+  width: 100%;
+  background: black;
 
   animation: flash 1s infinite;
   animation-direction: alternate-reverse;
 }
 @keyframes flash {
   0% {
-    background:black;
+    background: black;
   }
   20% {
-    background:#e9e511;
+    background: #e9e511;
   }
   100% {
-    background:#03ff00;
+    background: #03ff00;
   }
 }
 #audioContainer {
-    position: fixed;
-    bottom: 7%;
-    left: 40%;
+  position: fixed;
+  bottom: 7%;
+  left: 40%;
 }
 .mobile-container {
   max-width: 480px;
@@ -193,7 +216,7 @@ img {
   color: white;
 }
 #content-wrap {
-  padding-bottom: 2.5rem;    /* Footer height */
+  padding-bottom: 2.5rem; /* Footer height */
 }
 
 #footer {
@@ -201,26 +224,28 @@ img {
   bottom: 0;
   width: 100%;
   min-height: 100%;
-  height: 2.5rem;            /* Footer height */
+  height: 2.5rem; /* Footer height */
 }
-
 
 /* On smaller screens, where height is less than 450px, change the style of the sidebar (less padding and a smaller font size) */
 @media screen and (max-height: 450px) {
-  .sidenav {padding-top: 15px;}
-  .sidenav a {font-size: 18px;}
+  .sidenav {
+    padding-top: 15px;
+  }
+  .sidenav a {
+    font-size: 18px;
+  }
 }
 .videoWrapper {
-	position: relative;
-	padding-bottom: 56.25%; /* 16:9 */
-	padding-top: 25px;
-	height: 0;
+  position: relative;
+  padding-bottom: 56.25%; /* 16:9 */
+  padding-top: 25px;
+  height: 0;
 }
 .videoWrapper iframe {
-	position: absolute;
-	top: 0;
-	left: 20%;
-	width: 60%;
-	height: 60%;
+  position: absolute;
+  top: 0;
+  left: 20%;
+  width: 60%;
+  height: 60%;
 }
-
